<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_nav_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_nav_create"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_watchlist"
        android:icon="@drawable/ic_nav_watchlist"
        android:title="@string/nav_watchlist" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_nav_notifications"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
