<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splash_LAY_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!--
      TODO(ori): drop a Lottie JSON at res/raw/splash_animation.json and set
      app:lottie_rawRes on this view. Until then the logo below is what shows.
    -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splash_LOTTIE_animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/cd_splash_animation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false" />

    <ImageView
        android:id="@+id/splash_IMG_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/cd_app_logo"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_LBL_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_IMG_logo" />

    <TextView
        android:id="@+id/splash_LBL_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/app_tagline"
        android:textAppearance="@style/TextAppearance.PivotBoard.StateBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_LBL_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
